--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       content="luminaires premium, design d'intérieur, éclairage luxe, luminaires contemporain, décoration intérieur"
     />
     <meta name="theme-color" content="#1a3a52" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
